[package]
name = "pwasm-abstractions"
version = "0.1.0"
authors = ["Alexey Zhukovskiy <pzixel@gmail.com>"]

[dependencies]
pwasm-std = { git = "https://github.com/Pzixel/pwasm-std.git", branch = "feature/rust_129" }
pwasm-ethereum = "0.5.1"
pwasm-abi = "0.1.4"
pwasm-abi-derive = "0.1.3"

[dependencies.bigint]
version = "4.4.0"
default-features = false

[dependencies.parity-hash]
version = "1.2.0"
default-features = false

[patch.crates-io]
pwasm-std = { git = "https://github.com/Pzixel/pwasm-std.git", branch = "feature/rust_129" }

[dev-dependencies.pwasm-test]
git = "https://github.com/paritytech/pwasm-test"
default-features = false

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]
